<resources>
    <string name="app_name">UserInfo</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="user_ph">Phone number</string>
    <string name="user_pin_code">Pin code</string>
    <string name="user_address">Address</string>
    <string name="validate">Validate</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_message">
        Hi %1$s, How are you? Are you staying at %2$s-%3$s. I am not able to contact you on %4$s. Can I
email you the details at %5$s
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>