<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/inputTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/input_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_ph"
                android:inputType="phone">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/input_pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_pin_code"
                android:inputType="number">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_address"
                android:inputType="textMultiLine"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40mm"
            android:layout_marginTop="30dp"
            android:text="@string/validate"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/displayTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textStyle="bold"
                >
            </TextView>

            <TextView
                android:id="@+id/dis_username_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginLeft="10dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/dis_emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:layout_marginLeft="10dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/phone_number_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_ph"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/dis_phone_number_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_ph"
                android:layout_marginLeft="10dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/pin_code_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_pin_code"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/dis_pin_code_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_pin_code"
                android:layout_marginLeft="10dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/address_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_address"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/dis_address_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_address"
                android:layout_marginLeft="10dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_button"
                android:id="@+id/confirm_button"
                android:layout_marginLeft="30dp"
                >
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_marginLeft="20mm"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:id="@+id/cancel_button"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>